# Crypto-arb-scanner

./: Cargo.toml  README.md  binance.rs  bybit.rs  gateio.rs  index.html  kocoin.rs  main.rs  mod.rs  script .js  style.css
src/: main.rs
src/arbitrage/: mod.rs
src/exchange/: binance.rs  bybit.rs  gateio.rs  kocoin.rs  mod.rs
src/models/: mod.rs
src/ui/: mod.rs
static/: index.html  script .js  style.css
