[package]
name = "crypto-arb-web"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.0"
actix-files = "0.6"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
env_logger = "0.9"
async-trait = "0.1"
dialoguer = "0.10"
console = "0.15"
colored = "2.0"